# Habit-tracker

./: .coverage  README.md  SQL_functionalities.py  analytics.py  class_habit.py  class_timespan.py  habits.db  io_functions.py  main.py  project_test.py  pyproject.toml  pytest  pytest.db  requirements.txt  setup.py  test.db  testdata.py
Habit Tracker/: SQL_functionalities.py  analytics.py  class_TimeFunc.py  class_habit.py  io_functions.py  main.py  project_test.py  testdata.py
Habit Tracker/data/: test_data.db
Habit Tracker/tests/: project_test.py  testdata.py
habit_tracker/: SQL_functionalities.py  __main__.py  analytics.py  class_habit.py  io_functions.py
habit_tracker/tests/: project_test.py  testdata.py
